MOW-307 fix floating button position bug on small screens
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@57037 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/ev-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/ev-styles.scss
@@ -369,7 +369,11 @@
     	bottom: 8px !important;
     	right: 16px !important;
     }
-	.zoomPanelMow {
+    .zommPanelMow {
+    	margin-bottom: 8px;
+    	right: 16px !important;
+    }
+	.zoomPanelWithPageControl {
 		margin-bottom: 72px;
 		right: 22px !important;
 	}
